fixed overflow bug on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,23 +4,14 @@ $background-color: #232937;
 $primary-text-color: #e4f0fb;
 $secondary-text-color: #32ae85;
 /* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-hidden::-webkit-scrollbar {
-    display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge add Firefox */
-  .scrollbar-hidden {
-    -ms-overflow-style: none;
-    scrollbar-width: none; /* Firefox */
-  }
+/* width */
+::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
-}
-::-webkit-scrollbar {
-    display: none;
 }
 body{
     min-height: 100vh;
